[workspace]
members = [
    "tornado-kernel",
    "tornado-user",
    "shared-scheduler",
    "event",
    "async-mutex",
    "async-fat32",
    "async-fat32/example",
    "async-sd",
    "rv-lock",
    "xtask",
]
default-members = ["xtask"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[patch.crates-io]
ucd-trie = { path = "ucd-trie" }
pest = { path = "pest/pest" }
pest_derive = { path = "pest/derive" }
#pest_bootstrap = { path = "pest/bootstrap" }
