[workspace]
members = [
    "tornado-kernel",
    "tornado-user",
    "shared-scheduler",
    "event",
    "async-mutex",
    "async-fat32",
    "async-fat32/example",
    "async-sd",
    "rv-lock",
    "xtask",
]
default-members = ["xtask"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
