[package]
name = "async-mutex"
version = "0.1.0"
authors = ["SKTT1Ryze <linuxgnulover@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# event = { path = "../event", features = ["kernel"] }

[target.'cfg(features = "kernel")'.dependencies]
event = { path = "../event", features = ["kernel"] }

[target.'cfg(not(features = "kernel"))'.dependencies]
event = { path = "../event"}

[features]
kernel = []
