[package]
name = "event"
version = "0.1.0"
authors = ["SKTT1Ryze <linuxgnulover@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7"
rv-lock = { path  = "../rv-lock" }

[features]
default  = []
kernel = []
