[package]
name = "shared-scheduler"
version = "0.1.0"
authors = ["SKTT1Ryze <linuxgnulover@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7"
riscv = { git = "https://github.com.cnpmjs.org/rust-embedded/riscv.git", rev = "7e9d2e5b", features = ["inline-asm"] }
lazy_static = { version = "1", features = ["spin_no_std"] }
r0 = "1.0"
buddy_system_allocator = "0.6"