[package]
name = "tornado-kernel"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
riscv = "*"
spin = "0.7"
woke = "0.0.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "1.2"
bit_field = "0.10"
