[package]
name = "tornado-kernel"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.8"
spin = "0.7"
woke = "0.0.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "1.2"
bit_field = "0.10"
hashbrown = "0.9"
r0 = "1.0"
async-trait = { git = "https://github.com.cnpmjs.org/HUST-OS/async-trait.git", rev = "c612a647aa" }
riscv = { git = "https://github.com.cnpmjs.org/HUST-OS/riscv.git"}
plic = { git = "https://github.com.cnpmjs.org/HUST-OS/plic.git", branch = "main" }
async-virtio-driver = { path = "../async-virtio-driver" }
event = { path = "../event", features = ["kernel"] }
async-mutex = { path = "../async-mutex", features = ["kernel"] }
async-sd = { path = "../async-sd" }
rv-lock = { path  = "../rv-lock" }
# async-fat32 = { path = "../async-fat32" }

[features]
default = [] # 过cargo test和rust-analyzer
qemu = []
k210 = []
