[package]
name = "tornado-user"
version = "0.1.0"
authors = ["SKTT1Ryze <linuxgnulover@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
woke = "0.0.2"
spin = "0.5.2"
r0 = "1"
pest = "2"
pest_derive = "2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
