[package]
name = "example"
version = "0.1.0"
authors = ["SKTT1Ryze <linuxgnulover@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fat32 = { path = ".." }
async-std = {version = "1.9.0", features = ["attributes"]}
async-trait = "0.1.50"